# sparql-bencher

./: .gitignore  .gitmodules  Cargo.toml  README.md  default.yaml  pyproject.toml  requirements.txt  sparql-bench.py
.github/workflows/: pylint.yml
benchmarks/bsbm/: Containerfile  analyze.py  entrypoint.sh
benchmarks/windfarm/: .gitignore  Containerfile  README.md  analyze.py  entrypoint.sh  requirements.txt  runner.py
benchmarks/windfarm/queries/: grouped_production_query1.sparql  grouped_production_query2.sparql  grouped_production_query3.sparql  grouped_production_query4.sparql  production_query1.sparql  production_query2.sparql  production_query3.sparql  production_query4.sparql
bsbm/: README.md  bsbm_blazegraph.sh  bsbm_graphdb.sh  bsbm_jena.sh  bsbm_rdf4j.sh
bsbm/bench/: README.md
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  main.rs
engines/: setup.sh
engines/jena-fuseki/: Dockerfile
engines/rdf-fusion/: Containerfile
engines/rdf4j/: Containerfile
lib/benchmarks/: Cargo.toml
lib/benchmarks/src/: benchmark_suite_id.rs  lib.rs
lib/benchmarks/src/bsbm/: mod.rs
lib/common/: Cargo.toml
lib/common/src/: context.rs  lib.rs
lib/engines/: Cargo.toml
lib/engines/src/: lib.rs  rdf_fusion.rs
lib/prepare/: Cargo.toml
lib/prepare/src/: file_download.rs  lib.rs  requirement.rs  run_command.rs
lib/prepare/src/requirements/: file_download.rs  mod.rs  run_command.rs
sparql_bench/: __init__.py  command_runner.py  config.py  container_utils.py  image_utils.py  runner.py
src/: benchmark.rs  lib.rs  main.rs  subsystems.rs
