[workspace]
members = [
    "lib/benchmarks",
    "lib/common",
    "lib/engines",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Tobias Schwarzinger <tobias.schwarzinger@tuwien.ac.at>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
clap = "4.0"
clap_complete = "4.0"
clap_mangen = "0.2.19"
