[project]
name = "sparql-bencher"
version = "0.1.0"
description = "Compares RDF Fusion to other SPARQL Engines"
license = "Apache-2.0"
authors = [
    { name = "Tobias Schwarzinger", email = "tobias.schwarzinger@tuwien.ac.at" },
    { name = "Max Thoma", email = "max.thoma@tuwien.ac.at" }

]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
