[package]
name = "rdf-fusion-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database"]
categories = ["command-line-utilities"]
repository = "https://github.com/tobixdev/sparql-bencher/tree/main/cli"
description = """
A CLI tool for benchmarking SPARQL engines.
"""
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "sparql-bencher"
path = "src/main.rs"
doc = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
clap_mangen.workspace = true


